--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50,10 +50,6 @@ header p{
 header span i:hover{
     color:#fff;
 }
-.content{
-    width: 100%;
-    height: 90%;
-}
 
 .menu{
     width:60px;
@@ -105,7 +101,7 @@ font{
     grid-column: 1/3;
     text-align: center;
     padding: 5px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
