--- a/public/css/app.css
+++ b/public/css/app.css
@@ -108,10 +108,16 @@ font{
 .activo{
     color:#fff;
 }
+.content{
+    height:90%;
+}
+.content .forms{
+    height:100%;
+}
 .cards{
     display:grid;
     grid-template-columns: 32% 32% 32%;
-    grid-template-rows: 20% 10% 65%;
+    grid-template-rows: 15% 5% 75%;
     grid-gap:12px;
     width:100%;
     height:100%;
